# DIR882A1-GPL

./: Makefile  decompress.sh
config/: config.in  mkconfig  setconfig
lib/: Makefile
lib/db/: Makefile
lib/fcgi/: makefile
lib/json-c/: config_0.11.h.in  config_0.12.1.h.in  json_object.c  json_object_0.12.1.c  makefile
lib/libevent-2.0.2-alpha/: evdns.c  mkinstalldirs
lib/libevent-2.0.22-stable/: Makefile.am  Makefile.in  bufferevent.c  bufferevent_openssl.c  bufferevent_sock.c  config.h  config.status  configure  event.c  evutil.c  libevent.pc  libevent_openssl.pc  libevent_pthreads.pc  libtool  log-internal.h  log.c  makefile
lib/libexif/: Makefile  config.status  libexif.pc  libtool
lib/libffmpeg-0.5/: Makefile  common.mak  config.h  config.mak
lib/libflac/: Makefile  config.h  config.status  libtool  libtool-disable-static
lib/libflex/: Makefile  scan.c
lib/libgcrypt-1.5.1/: Makefile
lib/libgmp/: ansi2knr.c  config.status  gen-bases  gen-fac_ui  gen-fib  gen-psqr  gmp-mparam.h  libtool  makefile
lib/libgpg-error/: Makefile
lib/libid3tag-0.15.1b/: CHANGES  CREDITS  Makefile.am  README  TODO  compat.gperf  compat.h  configure.ac  crc.c  crc.h  debug.c  debug.h  field.c  field.h  file.c  file.h  frame.c  frame.h  frametype.gperf  frametype.h  genre.c  genre.dat.in  genre.dat.sed  genre.h  global.h  id3tag.h  latin1.c  latin1.h  parse.c  parse.h  render.c  render.h  tag.c  tag.h  ucs4.c  ucs4.h  utf16.c  utf16.h  utf8.c  utf8.h  (+4 more)
lib/libm/: math_private.h
lib/libmnl/: Makefile
lib/libncurses-5.7/: AUTHORS  INSTALL  Makefile.in  Makefile.os2  NEWS  README  README.emx  TO-DO  aclocal.m4  announce.html.in  configure.in  convert_configure.pl  dist.mk  mk-0th.awk  mk-1st.awk  mk-2nd.awk  mk-hdr.awk  mkdirs.sh  tar-copy.sh
lib/libnetfilter_conntrack/: Makefile
lib/libnfnetlink/: Makefile
lib/libnl/: configure
lib/libntfs-3g/: compat.c  logging.c
lib/libnvram/: Makefile  flash_api.c  nvram.h  nvram_env.c
lib/libogg/: Makefile  README  libtool
lib/libpcap-1.0.0/: CHANGES  INSTALL.txt  Makefile.in  README  aclocal.m4  arcnet.h  atmuni31.h  bpf_dump.c  bpf_image.c  configure.in  dlpisubs.c  dlpisubs.h  etherent.c  ethertype.h  fad-getad.c  fad-gifc.c  fad-glifc.c  fad-null.c  fad-win32.c  filtertest.c  gencode.c  gencode.h  grammar.y  inet.c  llc.h  nametoaddr.c  nlpid.h  optimize.c  pcap-bpf.c  pcap-bpf.h  pcap-bt-linux.c  pcap-bt-linux.h  pcap-config.1  pcap-dag.c  pcap-dag.h  pcap-dlpi.c  pcap-dos.c  pcap-dos.h  pcap-enet.c  pcap-filter.manmisc.in  (+74 more)
lib/libsqlite3/: Makefile  config.status  libtool
lib/libusb-0.1.12/: bsd.c
lib/libvorbis/: Makefile  config.status  libtool
lib/libzebra/: log.c  str.h
lib/lua/: Makefile.src.lua-5.1.5  makefile
lib/pcre-8.01/: config.h  config.status  configure  libtool
lib/sqlite-3.21.0/: config.status  configure  libtool  makefile  sqlite3.pc
lib/sqlite-3.7.2-src/: Makefile  config.status  libtool
lib/utils/: liboptim.sh
lib/vstr-1.0.15/: shtool
lib/zlib/: ChangeLog  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
lib/zlib-1.2.3/: ChangeLog  Makefile  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zconf.in.h  zutil.c  zutil.h
linux-3.10.14.x/: .config  .config.old  .vmlinux.cmd  Makefile  Module.symvers  modules.builtin
linux-3.10.14.x/.tmp_versions/: hw_nat.mod  nf_conntrack_ipsec.mod  nf_nat_ipsec.mod  nf_nat_sip.mod
romfs/sbin/: ipsec  (+34 more)
tools/: prepare  romfs-inst.sh
uClibc-0.9.33.2/: .config
user/: Makefile  curl-7.57.0.tar.bz2
user/inadyn-mt/inadyn-mt.v.02.28.10/: Makefile  Makefile.am  Makefile.in  autogen.sh  config.status  configure  configure.ac  examples.conf  makefile-deprecated  readme.html
user/inadyn-mt/inadyn-mt.v.02.28.10/autom4te.cache/: output.1  requests  traces.0  traces.1
user/inadyn-mt/inadyn-mt.v.02.28.10/debian/: control  rules
user/inadyn-mt/inadyn-mt.v.02.28.10/man/: Makefile  inadyn-mt.8
user/inadyn-mt/inadyn-mt.v.02.28.10/prj/bloodshed-dev-c++/.svn/: all-wcprops  entries
user/inadyn-mt/inadyn-mt.v.02.28.10/prj/msvc/.svn/: all-wcprops  entries
user/inadyn-mt/inadyn-mt.v.02.28.10/prj/msvc/ms_vc2003/.svn/: all-wcprops  entries
user/inadyn-mt/inadyn-mt.v.02.28.10/prj/msvc/ms_vc2003/inadyn/: inadyn-mt.sln  inadyn-mt.vcproj
user/inadyn-mt/inadyn-mt.v.02.28.10/prj/msvc/ms_vc2003/inadyn/.svn/: all-wcprops  entries
user/inadyn-mt/inadyn-mt.v.02.28.10/prj/msvc/ms_vc60/.svn/: all-wcprops  entries
user/inadyn-mt/inadyn-mt.v.02.28.10/prj/msvc/ms_vc60/inadyn/.svn/: all-wcprops  entries
user/inadyn-mt/inadyn-mt.v.02.28.10/prj/msvc/ms_vc60/inadyn/.svn/text-base/: inadyn-mt.dsp.svn-base
user/inadyn-mt/inadyn-mt.v.02.28.10/prj/vslick_edit/.svn/: all-wcprops  entries
user/inadyn-mt/inadyn-mt.v.02.28.10/src/: Makefile  Makefile.am  Makefile.in  addr_list.c  addr_list.h  args_exp.c  args_exp.h  base64.h  base64utils.c  cache_list.c  cache_list.h  config.h  config.h.in  config.status  dblhash.c  dblhash.h  debug_if.h  debug_service.h  dyndns.c  dyndns.h  errorcode.c  errorcode.h  events.c  events.h  get_cmd.c  get_cmd.h  http_client.c  http_client.h  inadyn-mt  inadyn_cmd.c  ip.c  ip.h  lang.c  list.c  list.h  main.c  md5.c  numbers.c  os.c  os.h  (+26 more)
user/inadyn-mt/inadyn-mt.v.02.28.10/src/.deps/: inadyn_mt-addr_list.Po  inadyn_mt-args_exp.Po  inadyn_mt-base64utils.Po  inadyn_mt-cache_list.Po  inadyn_mt-dblhash.Po  inadyn_mt-dyndns.Po  inadyn_mt-errorcode.Po  inadyn_mt-events.Po  inadyn_mt-get_cmd.Po  inadyn_mt-http_client.Po  inadyn_mt-inadyn_cmd.Po  inadyn_mt-ip.Po  inadyn_mt-lang.Po  inadyn_mt-list.Po  inadyn_mt-main.Po  inadyn_mt-md5.Po  inadyn_mt-numbers.Po  inadyn_mt-os.Po  inadyn_mt-os_psos.Po  inadyn_mt-os_unix.Po  inadyn_mt-path.Po  inadyn_mt-queue.Po  inadyn_mt-safe_mem.Po  inadyn_mt-sha1.Po  inadyn_mt-tcp.Po  inadyn_mt-threads_wrapper.Po  inadyn_mt-unicode_util.Po
user/mt-daapd-0.2.4.2/admin-root/: Makefile  Makefile.am  Makefile.in
vendors/: Makefile  configenc.sh
(+9896 files in other folders)
