# $Id: //WIFI_SOC/MP/SDK_5_0_0_0/RT288x_SDK/source/user/mt-daapd-0.2.4.2/admin-root/Makefile.am#1 $
#

adminrootdir = ${pkgdatadir}/admin-root
adminroot_DATA = ftr.html linkOpaque.gif status.html aspl-license.txt \
	gpl-license.txt linkTransparent.gif config-update.html hdr.html mt-daapd.css \
	mt-daapd.png config.html index.html required.gif gpl-license.html \
	aspl-license.html thanks.html feedback.html

EXTRA_DIST = ftr.html linkOpaque.gif status.html aspl-license.txt \
	gpl-license.txt linkTransparent.gif config-update.html hdr.html mt-daapd.css \
	mt-daapd.png config.html index.html required.gif gpl-license.html \
	aspl-license.html thanks.html feedback.html